01Oct08=======================================================================
1. added CTY-1809 prefix data
28Jun08=======================================================================
1. Made buddies work again on PC92.
26Jun08=======================================================================
1. added show/ik3qar command by Leo IZ5FSA. See comments in perl/Internet.pm
for setup instructions (note that you will have to copy these lines to
local/Internet.pm before it will work).
2. Send talks to every node a user is logged onto.
24Jun08=======================================================================
1. Change the route finding algorithm completely. No more recursion. No more
tree searching. It now gives you answers even on a partial cluster map. Oh
and the answers are correct, instead on completely random.
2. Put back (maybe some of) US State handling.
3. Add CTY-1806 prefix data
28May08=======================================================================
1. remove "recursion limit" message from Route.pm
28May08=======================================================================
1. Improve the detection of short exact callsigns that are out of prefix area
(eg K7A) (thank you FCC).
2. Improve long line handling on console.pl
3. Add CTY-1805 cty.dat
26May08=======================================================================
1. Put a hard limit on the depth of searching for routes
2. Add CTY-1804 prefix changes
13May08=======================================================================
1. add disc users|nodes|all so that each of these classes can be disconnected
in one command. From a request by Luigi IK5ZUK.
12May08=======================================================================
1. add 'exact' keyword on sh/dx to allow for an exact match to a callsign.
From a request by Robert HB9DZA.
10May08=======================================================================
1. add some privileges to (un)set/bad* and show/bad* commands. Thanks to