@@ -221,12 +221,6 @@ sub nodes
 	return @{$self->{nodes}};
 }
 
-sub parents
-{
-	my $self = shift;
-	return @{$self->{parent}};
-}
-
 sub rnodes
 {
 	my $self = shift;
